# msp430

./: CMakeLists.txt  README
cmake/: config.cmake
cmake/gcc/: msp430.cmake
src/: main.c
